# trading-master

./: .env.example  .gitignore  LICENSE  NEEDS_HUMAN.md  README.md  config.toml  portfolio_hanzhang_2026-03-17.csv  pyproject.toml  sample.csv  tm-loop.ps1  tm-monitor.py
.claude/: ralph-loop.local.md  ralph-wealth-engine.md  settings.json
.github/workflows/: ci.yml
src/trading_master/: __init__.py  alerts.py  budget.py  config.py  db.py  db_migrations.py  logging_config.py  models.py
src/trading_master/agents/: __init__.py  cache.py  fundamental.py  graph.py  llm.py  moderator.py  risk.py  sentiment.py  structured_output.py  technical.py
src/trading_master/cli/: __init__.py  action.py  allocation.py  analyze.py  backtest_app.py  init.py  portfolio.py  quant.py  report.py  risk.py  stop_loss.py  watchlist.py
tests/: test_agents.py  test_alerts.py  test_allocation.py  test_backtest.py  test_black_litterman.py  test_budget.py  test_cache.py  test_capm.py  test_circuit_breaker.py  test_cli_smoke.py  test_cointegration.py  test_compare.py  test_config.py  test_correlation.py  test_csv_import.py  test_daily_report.py  test_dashboard.py  test_db.py  test_dcf.py  test_dividends.py  test_e2e.py  test_evt.py  test_fama_french.py  test_fundamentals.py  test_garch.py  test_graph_integration.py  test_hrp.py  test_integration.py  test_llm_cost.py  test_macro.py  test_markowitz.py  test_migrations.py  test_models.py  test_monte_carlo.py  test_multi_timeframe.py  test_portfolio.py  test_quant_api.py  test_quant_stress.py  test_regime.py  test_report.py  (+12 more)
(+36 files in other folders)
