[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-master"
version = "0.2.0"
description = "Multi-agent portfolio management system"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "toml>=0.10",
    "python-dotenv>=1",
    "numpy>=1.26",
    "scipy>=1.12",
    "yfinance>=0.2",
    "stockstats>=0.6",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "openai>=1",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
robinhood = ["robin-stocks>=3"]
reddit = ["praw>=7"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
tm = "trading_master.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_master"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
